--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="webgl"></div>
 
-    <script src="src/index.js"></script>
+    <script src="src/material.js"></script>
   </body>
 </html>
